--- a/back/package.json
+++ b/back/package.json
@@ -6,6 +6,7 @@
     "sqlite3": "^5.1.6"
   },
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js",
+    "start:dev": "nodemon index.js"
   }
 }
