--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -86,7 +86,7 @@ jobs:
         with:
           switches: -avzr --delete
           path: built-front-app/
-          remote_path: ./minigames/front/
+          remote_path: minigames/front/
           remote_host: ${{ secrets.HOST }}
           remote_user: ${{ secrets.USER }}
           remote_key: ${{ secrets.KEY }}
@@ -98,7 +98,7 @@ jobs:
         with:
           switches: -avzr --delete
           path: built-back-app/
-          remote_path: ./minigames/back/
+          remote_path: minigames/back/
           remote_host: ${{ secrets.HOST }}
           remote_user: ${{ secrets.USER }}
           remote_key: ${{ secrets.KEY }}
@@ -110,7 +110,7 @@ jobs:
         with:
           switches: -avzr --update
           path: orchestration-apps/*
-          remote_path: ./minigames/orchestration/
+          remote_path: minigames/orchestration/
           remote_host: ${{ secrets.HOST }}
           remote_user: ${{ secrets.USER }}
           remote_key: ${{ secrets.KEY }}
