--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -95,8 +95,8 @@ jobs:
         uses: Burnett01/rsync-deployments@5.2.1
         with:
           switches: -avzr --delete
-          path: built-front-app/
-          remote_path: minigames/front/
+          path: built-front-app/*
+          remote_path: minigames/
           remote_host: ${{ secrets.HOST }}
           remote_user: ${{ secrets.USER }}
           remote_key: ${{ secrets.KEY }}
@@ -107,8 +107,8 @@ jobs:
         uses: Burnett01/rsync-deployments@5.2.1
         with:
           switches: -avzr --delete
-          path: built-back-app/
-          remote_path: minigames/back/
+          path: built-back-app/*
+          remote_path: minigames/
           remote_host: ${{ secrets.HOST }}
           remote_user: ${{ secrets.USER }}
           remote_key: ${{ secrets.KEY }}
@@ -120,7 +120,7 @@ jobs:
         with:
           switches: -avzr --update
           path: orchestration-apps/*
-          remote_path: ./
+          remote_path: minigames/
           remote_host: ${{ secrets.HOST }}
           remote_user: ${{ secrets.USER }}
           remote_key: ${{ secrets.KEY }}
