--- a/orchestration/dockerfile.front
+++ b/orchestration/dockerfile.front
@@ -2,7 +2,7 @@
 FROM nginx:stable-perl
 
 # Copiez le reste des fichiers de l'application dans le conteneur
-COPY ./build /usr/share/nginx/html
+COPY . /usr/share/nginx/html
 
 # Exposez le port sur lequel l'application écoute
 EXPOSE 80
