--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -139,5 +139,5 @@ jobs:
             cd ./minigames/orchestration
             sudo docker build -t minigames-front -f ./dockerfile.front ../front
             sudo docker build -t minigames-back -f ./dockerfile.back ../back
-            sudo docker run -p 3000:80 -d minigames-front
-            sudo docker run -p 5000:5000 -d minigames-back
+            sudo docker run -p 3000:80 -d --name minigames-app-front --rm minigames-front
+            sudo docker run -p 5000:5000 -d --name minigames-app-back --rm minigames-back
