--- a/orchestration/docker-compose.yml
+++ b/orchestration/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     image: minigames-back
     ports:
       - 5000:5000
-    volume:
+    volumes:
       - ../db:/app/db
     container_name: minigames-app-back
     restart: always
